- Changelog for v0.2.3 (2021-07-07)
    * Fixed some code details before launching online
    * Changed website icon
    * Changed "PJ mineur" choices ("non recommandé" --> "non")
    * Added a small text about line jumping in a description

- Changelog for v0.2.2 (2021-07-05)
    * JDR form now prevents sending if the user is not connected to Discord


- Changelog for v0.2.1 (2021-07-02)
    * Added the custom CSS from the presentation page

- Changelog for v0.2.0 (2021-06-25)
    * Added the calendar page prototype
  
- Changelog for v0.1.47 (2021-06-24)
  
    * Create changelog.txt for the calendar page
    
- Changelog for v1.1.47 (2021-06-21)
  
    * Create changelog.txt
    * Renamed project folder
    
    


Update README.md
@Daebis
Daebis committed 16 minutes ago

Update README.md
@Daebis
Daebis committed 19 minutes ago

Commits on Jun 13, 2020

    adding config file
    @tonitch
    tonitch committed on 13 Jun 2020

Commits on Jun 11, 2020

    Correction#2
    @tonitch
    tonitch committed on 11 Jun 2020

Correction#1
@tonitch
tonitch committed on 11 Jun 2020

Merge branch 'oauth2' of github.com:Bot-a-JDR/PageJDR into oauth2
@tonitch
tonitch committed on 11 Jun 2020

modification dae
@tonitch
tonitch committed on 11 Jun 2020

Modification bandeau joueurs
@tonitch
tonitch committed on 11 Jun 2020

adding Oauth2
@tonitch
tonitch committed on 11 Jun 2020

Commits on May 5, 2020

    modif mineur et correction bug system
    @dryasredrock
    dryasredrock committed on 5 May 2020

Commits on May 4, 2020

    multiple corrections 
    ajout du champs titre
    validation formulaire

@dryasredrock
dryasredrock committed on 4 May 2020

Commits on Apr 16, 2020

    UIKIT -> BOOTTRAP 
    Table -> responsive grid

@dryasredrock
dryasredrock committed on 16 Apr 2020

ajout jdr gobelin qui s'en dedit
@dryasredrock
dryasredrock committed on 16 Apr 2020

Commits on Apr 4, 2020
Changements : 
- Les options sont désormais en blanc