@@ -1,0 +1,3 @@
+function save(){
+	localStorage.setItem("text", document.getElementById("desc").value); //Permet de stocker le contenu de la description
+}
