@@ -1,4 +1,7 @@
 - Changelog for v0.2.3 (2021-07-07)
+    * Added logout button
+    * Changed beta text color
+    * Description is now saved on input
     * Fixed some code details before launching online
     * Changed website icon
     * Changed "PJ mineur" choices ("non recommandé" --> "non")
